tests/syntax/bad/testfile-return2-1.scala
class A { var x =  }
object Main { def main(args: Array[String]) { } }
